fixing bug 2559 "libtool-2.2.10 is not called ltmain.sh anymore"
Apparently, (at least) as of libtool 2.2.10, libtool calls itself
no longer "ltmain.sh" but "libtool" in its own `--version` output;
hence, we need to adapt our version analysis in Mbootstrap.in .

Thanks go to Stefan de Konink for reporting the problem and
providing a patch.

--- a/buildtools/conf/Mbootstrap.in
+++ b/buildtools/conf/Mbootstrap.in
@@ -111,7 +111,7 @@ if [ ! "`type -p $LIBTOOL`" ]; then
 	echo "Please get it at eg. http://www.gnu.org/software/libtool/." >&2
 	exit 1
 fi
-LT_VERSION=`$LIBTOOL --version 2>/dev/null | sed -n '/^ltmain\.sh/{s/([^)]*)//g;s/ltmain.sh//g;s/ //g;p;q;}'`
+LT_VERSION=`$LIBTOOL --version 2>/dev/null | sed -n '/^\(ltmain\.sh\|libtool\)/{s/([^)]*)//g;s/\(ltmain\.sh\|libtool\)//g;s/ //g;p;q;}'`
 _LT_VERSION=`echo $LT_VERSION | awk 'BEGIN { FS = "."; } { printf "%d", ($1 * 1000 + $2) * 1000 + $3;}'`
 _REQ_LT_VERSION=`echo $REQ_LT_VERSION | awk 'BEGIN { FS = "."; } { printf "%d", ($1 * 1000 + $2) * 1000 + $3;}'`
 
