make sure we (try to) run ODBC tests only if we do have ODBC:
make the conditional HAVE_ODBC available to Mtest.py
(via `monetdb-clients-config --conds`)
and use it to enable ODBC test only if there is ODBC

--- a/clients/conf/monetdb-clients-config.in
+++ b/clients/conf/monetdb-clients-config.in
@@ -135,6 +135,7 @@ while test $# -gt 0; do
 	echo HAVE_BUILDTOOLS=@HAVE_BUILDTOOLS_FALSE@
 	echo HAVE_EXTRA_MK=@HAVE_EXTRA_MK_FALSE@
 	echo HAVE_MONETDB=@HAVE_MONETDB_FALSE@
+	echo HAVE_ODBC=@HAVE_ODBC_FALSE@
 	echo HAVE_PCRE=@HAVE_PCRE_FALSE@
 	echo HAVE_PERL_DEVEL=@HAVE_PERL_DEVEL_FALSE@
 	echo HAVE_PERL=@HAVE_PERL_FALSE@
