--- a/testing/src/Mfilter.py.in
+++ b/testing/src/Mfilter.py.in
@@ -144,6 +144,7 @@ norm_in  = re.compile('(?:'+')|(?:'.join([
     r'^(.*: )(illegal|invalid)( option -- .*)\n',                                                                                               # 23: 3
     r'^(01/Jan/1970 01:00:00 shttpd_open_port: bind\(|!ERROR: MAPIlisten:binding to stream socket \()([0-9]+)(\): Address already in use|\) failed)\n', # 24: 3
     r'^(!.*Exception:remote\.[^:]*:\(mapi:monetdb://monetdb@)([^/]*)(/mTests_.*\).*)\n',                                                        # 25: 3
+    r'^(ERROR = !sql_stmt symbol\()(.*)(\)->token = CREATE_SCHEMA)\n',                                                                          # 26: 3
     r'^(.*: at )(\([0-9]+,[0-9]+\-[0-9]+,[0-9]+\))(: .*)\n',                                                                                    # 90: 3
     r'^(fatal error|ERROR)(: err:FORG0005, fn:exactly-one called with a sequence containing zero or more than one item..*)()\n',                # 99: 3
 ])+')',  re.MULTILINE)
@@ -176,6 +177,7 @@ norm_out = (
     None, 'invalid', None,                                                                              # 23: 3
     None, '...', None,                                                                                  # 24: 3
     None, 'localhost', None,                                                                            # 25: 3
+    None, '...', None,                                                                                  # 26: 3
     None, '...', None,                                                                                  # 90: 3
     '=ERROR', None, '\n#',                                                                              # 99: 3
 ##    '=ERROR', None, '''
