--- a/sql/src/backends/monet5/vaults/Makefile.ag
+++ b/sql/src/backends/monet5/vaults/Makefile.ag
@@ -15,7 +15,7 @@
 # Copyright August 2008-2010 MonetDB B.V.
 # All Rights Reserved.
 
-INCLUDES = ../../include ../../common ../../storage ../../server \
+INCLUDES = ../../include ../../common ../../storage ../../server ../ \
 	$(MONETDB5_INCS) $(CLIENTS_INCS) $(MONETDB_INCS) $(READLINE_INCS) $(MSEED_CFLAGS)
 
 lib__vault = {
