--- a/MonetDB5/debian/control
+++ b/MonetDB5/debian/control
@@ -1,7 +1,7 @@
 Source: monetdb5-server
 Section: misc
 Priority: extra
-Maintainer: MonetDB BV <monet@cwi.nl>
+Maintainer: MonetDB BV <info@monetdb.org>
 Build-Depends: debhelper (>= 5), autotools-dev, libpcre3-dev, libssl-dev, libraptor1-dev, libxml2-dev, libmonetdb-dev, libmonetdb-client-dev, cdbs
 Standards-Version: 3.8.0
 
