--- a/buildtools/conf/mock/site-defaults.cfg
+++ b/buildtools/conf/mock/site-defaults.cfg
@@ -96,4 +96,4 @@
 # config_opts['chrootuid'] = os.getuid()
 # config_opts['chrootgid'] = grp.getgrnam("mock")[2]
 # config_opts['useradd'] = '/usr/sbin/useradd -m -u %(uid)s -g %(gid)s -d %(home)s -n %(user)s' # Fedora/RedHat
-config_opts['macros']['%packager'] = 'MonetDB Database System <monet@cwi.nl>'
+config_opts['macros']['%packager'] = 'MonetDB Database System <info@monetdb.org>'
