--- a/sql/src/backends/monet5/merovingian/monetdb.1.in
+++ b/sql/src/backends/monet5/merovingian/monetdb.1.in
@@ -173,7 +173,9 @@ Sets property to value for the given databases.  For a list of
 properties, run
 .BR "monetdb get all" .
 Most properties require the database to be stopped when set.  The
-following properties have special values.
+following properties have special values, or do not have an equivalent
+in
+.BR monetdb5.conf (5).
 .IP "  forward=<redirect|proxy>"
 When set to redirect, merovingian tells each connecting client to make a
 new connection directly to the database the client looks for.  This
@@ -209,8 +211,15 @@ the
 .I id
 is not required to be in the format of a UUID (see
 .BR uuid_generate (3)).
+.IP "  slave=<uri>"
+Defines if the database is to be started as a replication slave from the
+master identified by
+.IR uri .
+A valid URI looks like
+.BI mapi:monetdb:// hostname : port / database
+which is a regular mapi URI.
 .IP "  readonly=<yes|no>"
-Defines if the database has to be started readonly.
+Defines if the database has to be started in readonly mode.
 .IP "inherit property database [database ...]"
 Like set, but unsets the database-local value, and reverts to inherit
 from the default again.
