--- a/clients/src/odbc/samples/Makefile.ag
+++ b/clients/src/odbc/samples/Makefile.ag
@@ -21,7 +21,7 @@ INCLUDES = ../include -I$(MONETDB_INCLUDEDIR)
 BINS = {
 	DIR = libdir/MonetDB/Tests
 	SOURCES = odbcsample1.c testgetinfo.c
-	LIBS = ../driver/libMonetODBC
+	LIBS = ../driver/libMonetODBC ../../mapilib/libMapi
 }
 
 bin_odbctest = {
