--- a/MonetDB5/src/tools/monet_version.c.in
+++ b/MonetDB5/src/tools/monet_version.c.in
@@ -46,6 +46,10 @@ monet_version(void)
 			"based on kernel v%s (" SZFMT "-bit oids)\n",
 			(size_t) (sizeof(ptr) * 8), GDKversion(),
 			(size_t) (sizeof(oid) * 8));
+	if (strcmp(MONETDB_RELEASE, "unreleased") == 0)
+		printf("Not released\n");
+	else
+		printf("Release %s\n", MONETDB_RELEASE);
 	printf("Copyright (c) 1993-July 2008 CWI\n"
 			"Copyright (c) August 2008-2010 MonetDB B.V., all rights reserved\n");
 	printf("Visit http://monetdb.cwi.nl/ for further information\n");
