--- a/testing/src/Mfilter.py.in
+++ b/testing/src/Mfilter.py.in
@@ -120,8 +120,7 @@ norm_in  = re.compile('(?:'+')|(?:'.join([
 ##  r'^(ERROR = !| *!|)(syntax|parse|parse error: syntax)( error, )(unexpected .* on line |unexpected .* in: )?(.*)\n',                         # 01: 5
     r'^(ERROR = !| *!|)(syntax|parse|parse error: syntax)( error, )(?:unexpected .* on line |unexpected .* in: )?(?:.*)\n',                     # 01: 3
     r'^(!ERROR: .*: [0-9]+ times inserted nil due to errors at tuples )([0-9]+)(\..*)\n',                                                       # 02: 3
-#   r'^( *!ERROR: shred: cannot stat .*: )(No such file or directory|Error 0)\n',                                                               # 03a: 2
-#   r'^(ERROR =|       )( !ERROR: | !SQLException:assert:| !SQLException:sql: | !SQLException:| !MALException:)([^:]+)(: *)([^ ].*)\n',         # 03b: 5
+#   r'^( *!ERROR: shred: cannot stat .*: )(No such file or directory|Error 0)\n',                                                               # 03: 2
 #   r'^(Connection warning:.*\()(mserver_mal|mserver_sql)(\).*)\n',                                                                             # 04: 3
 #   r'^(ERROR: I/O warning : failed to load external entity ")(.*)(".*)\n',                                                                     # 05: 3
 #   r'^(ERROR: shred:mainSHREDDER: xmlCreateURLParserCtxt\(")(.*)("\) failed.*)\n',                                                             # 06: 3
@@ -145,7 +144,8 @@ norm_in  = re.compile('(?:'+')|(?:'.join([
     r'^(01/Jan/1970 01:00:00 shttpd_open_port: bind\(|!ERROR: MAPIlisten:binding to stream socket \()([0-9]+)(\): Address already in use|\) failed)\n', # 24: 3
     r'^(!.*Exception:remote\.[^:]*:\(mapi:monetdb://monetdb@)([^/]*)(/mTests_.*\).*)\n',                                                        # 25: 3
 #   r'^(ERROR = !sql_stmt symbol\()(.*)(\)->token = CREATE_SCHEMA)\n',                                                                          # 26: 3
-    r'^(.*: at )(\([0-9]+,[0-9]+\-[0-9]+,[0-9]+\))(: .*)\n',                                                                                    # 90: 3
+#   r'^(ERROR =|       )( !ERROR: | !SQLException:assert:| !SQLException:sql: | !SQLException:| !MALException:)([^:]+)(: *)([^ ].*)\n',         # 90: 5
+    r'^(.*: at )(\([0-9]+,[0-9]+\-[0-9]+,[0-9]+\))(: .*)\n',                                                                                    # 91: 3
 #   r'^(fatal error|ERROR)(: err:FORG0005, fn:exactly-one called with a sequence containing zero or more than one item..*)()\n',                # 99: 3
 ])+')',  re.MULTILINE)
 norm_hint = '# the original non-normalized output was: '
@@ -153,8 +153,7 @@ norm_out = (
 ##  None, 'syntax/parse', None, 'unexpected ... on line/in: ', None,                                    # 01: 5
     None, 'syntax/parse', None,                                                                         # 01: 3
     None, '...', None,                                                                                  # 02: 3
-#   None, 'No such file or directory',                                                                  # 03a: 2
-#   None, ' !ERROR', '', ': ', None,                                                                    # 03b: 5
+#   None, 'No such file or directory',                                                                  # 03: 2
 #   None, 'mserver_sql', None,                                                                          # 04: 3
 #   None, '...', None,                                                                                  # 05: 3
 #   None, '...', None,                                                                                  # 06: 3
@@ -178,7 +177,8 @@ norm_out = (
     None, '...', None,                                                                                  # 24: 3
     None, 'localhost', None,                                                                            # 25: 3
 #   None, '...', None,                                                                                  # 26: 3
-    None, '...', None,                                                                                  # 90: 3
+#   None, ' !ERROR', '', ': ', None,                                                                    # 90: 5
+    None, '...', None,                                                                                  # 91: 3
 #   '=ERROR', None, '\n#',                                                                              # 99: 3
 ##    '=ERROR', None, '''
 ##type error: no variant of function ... accepts the given argument type(s): ... %s
