--- a/sql/RunMtest.bat.in
+++ b/sql/RunMtest.bat.in
@@ -17,6 +17,7 @@ set builddir=@XSQL_BUILD@
 set srcdir=@XSQL_SOURCE@
 
 set MOD_PATH=%modpath%
+set MOD_PATH=%builddir%\src\sql;%MOD_PATH%
 set MOD_PATH=%builddir%\src\backends\monet5;%MOD_PATH%
 set MOD_PATH=%builddir%\src\backends\monet5\.libs;%MOD_PATH%
 
