--- a/MonetDB5/src/tools/monet_version.c.in
+++ b/MonetDB5/src/tools/monet_version.c.in
@@ -53,11 +53,18 @@ monet_version(void)
 	printf("Copyright (c) 1993-July 2008 CWI\n"
 			"Copyright (c) August 2008-2010 MonetDB B.V., all rights reserved\n");
 	printf("Visit http://monetdb.cwi.nl/ for further information\n");
+#ifdef WIN32
+	/* Detection of cpus is fine on windows, but multithreading doesn't
+	 * work, so it's forced to 1.  Don't suggest we misdetect #cpus.
+	 * See: MonetDB/src/gdk/gdk_system.mx */
+	printf("Found %.1fGiB available memory\n", sz_mem_gb);
+#else
 	printf("Found %.1fGiB available memory, %d available cpu core%s\n",
 			sz_mem_gb, cores, cores != 1 ? "s" : "");
 	/* don't want to GDKinit just for this
 			"using %d thread%s\n",
 			GDKnr_threads, GDKnr_threads != 1 ? "s" : ""); */
+#endif
 	printf("Configured for prefix: " MONETDB5_PREFIX "\n");
 	printf("Libraries:\n");
 #ifdef HAVE_LIBPCRE
