--- a/MonetDB5/conf/monetdb5.conf.in
+++ b/MonetDB5/conf/monetdb5.conf.in
@@ -37,24 +37,27 @@ exec_prefix=@exec_prefix@
 # given below.  Use this value to change the overall location
 # of your data.
 gdk_dbfarm=@localstatedir@@DIRSEP@MonetDB5@DIRSEP@dbfarm
-
+#
 # MonetDB can only handle one database at a time.  When you start an
 # mserver5 manually without specifying the database name yourself, the
 # following database name is used.
 #gdk_dbname=demo
-
 
 # Monet Section
 #==============
 # monet_admin=adm			#administrator user name
 # Prompt when using MAL interface
 # monet_prompt=>
+#
 # Where do the MonetDB modules reside? The second path is for windows dlls.
 monet_mod_path=@libdir@@DIRSEP@MonetDB5@PATHSEP@@libdir@@DIRSEP@MonetDB5@DIRSEP@lib@PATHSEP@@libdir@@DIRSEP@MonetDB5@DIRSEP@bin
+#
 # Start mserver in daemon mode, or start with MAL interactive interface?
 #monet_daemon=no
+#
 # Display version and copyright information upon startup?
 #monet_welcome=yes
+#
 # Where is the file that stores the secret key to unlock the password
 # vault?  The file is read up to the first null-byte ('\0'), so you can
 # padd the file with trailing null-bytes to obfuscate the key length.
@@ -64,9 +67,8 @@ monet_mod_path=@libdir@@DIRSEP@MonetDB5@PATHSEP@@libdir@@DIRSEP@MonetDB5@DIRSEP@
 # Note: changing this key for an existing database makes that database
 # unusable as noone is any longer able to login.
 # If you use Merovingian, a per-database vault key is used and this
-# setting ignored.
+# setting is ignored.
 #monet_vault_key=@sysconfdir@@DIRSEP@monetdb.secret
-
 
 # Merovingian section
 #====================
@@ -153,24 +155,28 @@ mero_pidfile=@localstatedir@@DIRSEP@run@DIRSEP@MonetDB@DIRSEP@merovingian.pid
 # opened for some reason, Merovingian will not start.
 mero_controlport=50001
 
-
 # Monet Application Interface Section
 #====================================
-#mapi_port=50000      # default port to address an mserver
-#mapi_autosense=false # if set to 'true': automatically find a free port
-                      # starting the search at mapi_port and going up
-#mapi_open=false      # should be set to 'true' to allow for
-                      # remote access to a server
+# default TCP port opened by mserver5 for a client to connect to
+#mapi_port=50000
+#
+# whether or not to automatically find a free port if mapi_port is
+# already taken by another application
+#mapi_autosense=false
+#
+# whether or not to allow remote access to the server (bind to any
+# interface or just localhost)
+#mapi_open=false
+#
+# mapi_usock is ignored on platforms that do not support UNIX domain
+# sockets, it is disabled by default, but e.g. enabled by Merovingian
 #mapi_usock=${gdk_dbfarm}@DIRSEP@mapi_socket
-                      # mapi_usock is ignored on platforms that do not
-                      # support UNIX domain sockets, it is disabled by
-                      # default, but e.g. enabled by Merovingian
 
 # SQL Interface Section
 #======================
 # The SQL debug level (should be disabled for normal use)
-# sql_debug=0
-
+#sql_debug=0
+#
 # The default SQL optimizer pipeline can be set per server.  See the
 # optpipe setting in monetdb(1) when using merovingian.  During SQL
 # initialization, the optimizer pipeline is checked against the
@@ -180,56 +186,56 @@ mero_controlport=50001
 # optimizers to run, or one or more variables containing the optimizer
 # pipeline to run.  The latter is provided for readability purposes
 # only.
-
+#
 # Set and define the default pipeline
 sql_optimizer=default_pipe
-
+#
 # The minimal pipeline necessary by the server to operate correctly
 minimal_pipe=inline,remap,deadcode,multiplex,garbageCollector
-
+#
 # The default pipe line contains as of Feb2010
 # mitosis-mergetable-reorder, aimed at large tables and improved access
 # locality
 default_pipe=inline,remap,evaluate,costModel,coercions,emptySet,aliases,mitosis,mergetable,deadcode,commonTerms,joinPath,reorder,deadcode,reduce,dataflow,history,multiplex,garbageCollector
-
+#
 # The default pipeline used in the November 2009 release
 nov2009_pipe=inline,remap,evaluate,costModel,coercions,emptySet,aliases,mergetable,deadcode,constants,commonTerms,joinPath,deadcode,reduce,dataflow,history,multiplex,garbageCollector
-
+#
 # Experimental pipelines stressing various components under development
 # Do not use any of these pipelines in production settings!
-
+#
 # Replication
 replication_pipe=inline,remap,evaluate,costModel,coercions,emptySet,aliases,mergetable,deadcode,constants,commonTerms,joinPath,deadcode,reduce,dataflow,history,replication,multiplex,garbageCollector
-
+#
 # Accumulator
 accumulator_pipe=inline,remap,evaluate,costModel,coercions,emptySet,aliases,mergetable,deadcode,constants,commonTerms,joinPath,deadcode,reduce,accumulators,dataflow,history,multiplex,garbageCollector
-
+#
 # The Recycle pipeline for Skyserver
 recycler_pipe=inline,remap,evaluate,costModel,coercions,emptySet,aliases,deadcode,constants,commonTerms,joinPath,deadcode,recycle,reduce,dataflow,history,multiplex,garbageCollector
-
+#
 # The Cracking pipeline(s)
 cracker_pipe=inline,remap,evaluate,costModel,coercions,emptySet,aliases,selcrack,deadcode,constants,commonTerms,joinPath,deadcode,reduce,dataflow,history,multiplex,garbageCollector
 sidcrack_pipe=inline,remap,evaluate,costModel,coercions,emptySet,aliases,sidcrack,deadcode,constants,commonTerms,joinPath,deadcode,reduce,dataflow,history,multiplex,garbageCollector
-
+#
 # The datacell pipeline
 datacell_pipe=inline,remap,evaluate,costModel,coercions,emptySet,aliases,deadcode,constants,commonTerms,joinPath,datacell,deadcode,reduce,dataflow,history,multiplex,garbageCollector
-
+#
 # The Octopus pipeline for distributed processing (Merovingian enabled
 # platforms only)
 octopus_pipe=inline,remap,evaluate,costModel,coercions,emptySet,aliases,mitosis,mergetable,deadcode,constants,commonTerms,joinPath,octopus,deadcode,reduce,dataflow,history,multiplex,garbageCollector
-
+#
 # The MapReduce pipeline for a different flavour of distributed
 # processing on Merovingian enabled platforms
 mapreduce_pipe=inline,remap,evaluate,costModel,coercions,emptySet,aliases,mapreduce,mergetable,deadcode,commonTerms,joinPath,reorder,deadcode,reduce,dataflow,history,multiplex,garbageCollector
-
+#
 # The default + datacyclotron
 datacyclotron_pipe=inline,remap,evaluate,costModel,coercions,emptySet,aliases,datacyclotron,mergetable,deadcode,constants,commonTerms,joinPath,reorder,deadcode,reduce,dataflow,history,replication,multiplex,garbageCollector
-
+#
 # The default + derivePath
 derive_pipe=inline,remap,evaluate,costModel,coercions,emptySet,aliases,mergetable,deadcode,constants,commonTerms,derivePath,joinPath,deadcode,reduce,dataflow,history,multiplex,garbageCollector
-
+#
 # The default + dictionary
 dictionary_pipe=inline,remap,dictionary,evaluate,costModel,coercions,emptySet,aliases,mergetable,deadcode,constants,commonTerms,joinPath,deadcode,reduce,dataflow,history,multiplex,garbageCollector
-
+#
 # The default + compression
 compression_pipe=inline,remap,evaluate,costModel,coercions,emptySet,aliases,mergetable,deadcode,constants,commonTerms,joinPath,deadcode,reduce,dataflow,compression,dataflow,history,multiplex,garbageCollector
