create (SQL) function s to use the zorder functions
added three wrapper MAL commands in zorder.mx

--- a/sql/src/sql/Makefile.ag
+++ b/sql/src/sql/Makefile.ag
@@ -26,5 +26,6 @@ headers_sql = {
 		date.sql history.sql inet.sql \
 		math.sql mtime.sql \
 		times.sql url.sql \
+		zorder.sql \
 		dependency_functions.sql skyserver.sql
 }
