--- a/testing/src/Mtest.py.in
+++ b/testing/src/Mtest.py.in
@@ -1030,7 +1030,7 @@ def PerformDir(env, testdir, testlist, BusyPorts) :
     if THISFILE == "Mtest.py":
         if env.has_key('GDK_DBFARM'):
             LogDBdir = os.path.join(env['GDK_DBFARM'],TSTDB)
-            if LogDBdir and os.path.exists(LogDBdir):
+            if not env.get('NOCLEAN') and LogDBdir and os.path.exists(LogDBdir):
                 try:
                     shutil.rmtree(LogDBdir)
                 except:
@@ -3085,6 +3085,7 @@ def main(argv) :
              "echo differences between stable and current test output to console (stdout)"),
             ('mserver_set', None, 'mserver_set', '<Mserver_option>',
              "This passes a single set to the server"),
+            ('no-clean', None, 'no_clean', None, 'Do not clean up before test'),
             ]
 
     if THISFILE == 'Mtest.py':
@@ -3218,6 +3219,9 @@ def main(argv) :
             env['MSERVER_SET'] = "--set " + a
         else:
             env['MSERVER_SET'] = ""
+        a = opts.get('no_clean')
+        if a is not None:
+            env['NOCLEAN'] = a
     if THISFILE == 'Mapprove.py':
         a = opts.get('ext')
         if a is None:
@@ -3595,7 +3599,7 @@ def main(argv) :
                 if os.path.isfile(f):
                     shutil.copy(f,"C:"+os.sep+"Tools")
 
-        if os.path.exists(os.path.join(env['TSTTRGBASE'],TSTPREF)):
+        if not env.get('NOCLEAN') and os.path.exists(os.path.join(env['TSTTRGBASE'],TSTPREF)):
             try:
                 shutil.rmtree(os.path.join(env['TSTTRGBASE'],TSTPREF))
             except:
@@ -3608,17 +3612,22 @@ def main(argv) :
                 #TODO: set mode to umask
                 os.makedirs(env['XRPC_DOCROOT'])
 
-        if os.path.exists(os.path.join(env['GDK_DBFARM'],TSTPREF)):
+        if not env.get('NOCLEAN') and os.path.exists(os.path.join(env['GDK_DBFARM'],TSTPREF)):
             try:
                 shutil.rmtree(os.path.join(env['GDK_DBFARM'],TSTPREF))
             except:
                 ErrXit("Failed to remove %s" % os.path.join(env['GDK_DBFARM'],TSTPREF))
         try:
             os.makedirs(os.path.join(env['GDK_DBFARM'],TSTPREF))
-        except:
-            ErrXit("Failed to create %s" % os.path.join(env['GDK_DBFARM'],TSTPREF))
+        except os.error:
+            if not env.get('NOCLEAN'):
+                ErrXit("Failed to create %s" % os.path.join(env['GDK_DBFARM'],TSTPREF))
 
-        os.makedirs(os.path.join(env['TSTTRGBASE'],TSTPREF))
+        try:
+            os.makedirs(os.path.join(env['TSTTRGBASE'],TSTPREF))
+        except os.error:
+            if not env.get('NOCLEAN'):
+                ErrXit("Failed to create %s" % os.path.join(env['TSTTRGBASE'],TSTPREF))
 
         # write .monetdb file for mclient to do authentication with
         dotmonetdbfile = os.path.join(env['TSTTRGBASE'], ".monetdb")
