Renamed python/README.rst to README.txt and added MANIFEST. This should help building a source distribution and RPMs using setup.py.

--- a/.hgignore
+++ b/.hgignore
@@ -57,6 +57,7 @@ TAGS$
 ^pathfinder/NT/runtime/
 ^pathfinder/conf/compile$
 ^python/build/
+^python/dist/
 ^sql/NT/MonetDB-SQL\.pc$
 aclocal\.m4$
 acout\.in$
