--- a/pathfinder/debian/control
+++ b/pathfinder/debian/control
@@ -28,10 +28,22 @@ Description: MonetDB xquery support for MonetDB4-server
  .
  This package contains the XQuery frontend for monetdb4.
 
+Package: libpf_ferry0
+Section: libs
+Architecture: any
+Depends: ${shlibs:Depends}, ${misc:Depends}, libmonetdb1, libmonetdb4-server4
+Description: MonetDB xquery support for MonetDB4-server
+ MonetDB is a database management system that is developed from a
+ main-memory perspective with use of a fully decomposed storage model,
+ automatic index management, extensibility of data types and search
+ accelerators, SQL- and XML- frontends.
+ .
+ This package contains the pf_ferry library.
+
 Package: libmonetdb4-xquery-dev
 Section: libs
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, libmonetdb4-xquery0, libmonetdb-dev, libmonetdb4-server-dev
+Depends: ${shlibs:Depends}, ${misc:Depends}, libmonetdb4-xquery0, libpf_ferry0, libmonetdb-dev, libmonetdb4-server-dev
 Description: MonetDB xquery libraries
  MonetDB is a database management system that is developed from a
  main-memory perspective with use of a fully decomposed storage model,
