Print database name and server version in msqldump. Use SQL comments (--) to print extra dump information. Use msqldump -q flag to disable printing of this extra information. Use -q flag in testing.

--- a/testing/src/Mtest.py.in
+++ b/testing/src/Mtest.py.in
@@ -3008,7 +3008,7 @@ def main(argv) :
         dft['MILCLIENT']      = "'mclient -lmil -ftest'"
         dft['MALCLIENT']      = "'mclient -lmal -ftest'"
         dft['SQLCLIENT']      = "'mclient -lsql -ftest'"
-        dft['SQLDUMP']        = "'msqldump'"
+        dft['SQLDUMP']        = "'msqldump -q'"
         dft['XQUERYCLIENT']   = "'mclient -lxquery -fxml'"
 
     #par = {}
